xml, video and logcat done

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,9 @@ robotframework = "*"
 robotframework-consoledialogs = "*"
 robotframework-seleniumlibrary = "*"
 robotframework-appiumlibrary = "*"
+urllib3 = "*"
+requests = "*"
+chardet = "*"
 
 [dev-packages]
 
